[gd_scene load_steps=31 format=2]

[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00007.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00013.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00003.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00008.png" type="Texture" id=4]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00014.png" type="Texture" id=5]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00006.png" type="Texture" id=6]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00017.png" type="Texture" id=7]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00012.png" type="Texture" id=8]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00005.png" type="Texture" id=9]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00011.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00015.png" type="Texture" id=11]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00001.png" type="Texture" id=12]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00016.png" type="Texture" id=13]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00002.png" type="Texture" id=14]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00010.png" type="Texture" id=15]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00018.png" type="Texture" id=16]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00004.png" type="Texture" id=17]
[ext_resource path="res://Cenas/Main/Animated Background/mainbackground_00009.png" type="Texture" id=18]
[ext_resource path="res://Cenas/Main/Buttons/Credits Icon0001.png" type="Texture" id=19]
[ext_resource path="res://Cenas/Main/Buttons/Credits Icon0000.png" type="Texture" id=20]
[ext_resource path="res://Cenas/Main/Buttons/Credits Icon0002.png" type="Texture" id=21]
[ext_resource path="res://Cenas/Main/Buttons/Credits Icon0003.png" type="Texture" id=22]
[ext_resource path="res://Cenas/Main/Buttons/Credits Icon0004.png" type="Texture" id=23]
[ext_resource path="res://Cenas/Main/Menu.gd" type="Script" id=24]
[ext_resource path="res://Cenas/Main/Naruto Main Theme.wav" type="AudioStream" id=25]
[ext_resource path="res://njnaruto.ttf" type="DynamicFontData" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 7
outline_size = 1
outline_color = Color( 0.929412, 0.372549, 0, 1 )
font_data = ExtResource( 26 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGroundMain" type="AnimatedSprite" parent="."]
position = Vector2( 160.192, 96.1353 )
scale = Vector2( 0.255176, 0.269598 )
frames = SubResource( 1 )
frame = 12
playing = true

[node name="CreditsButton" type="Button" parent="."]
anchor_right = 0.11
anchor_bottom = 0.089
margin_left = 263.751
margin_top = 138.897
margin_right = 752.551
margin_bottom = 639.809
rect_scale = Vector2( 0.112439, 0.109577 )
icon = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CreditsButton"]
position = Vector2( 229.711, 195.467 )
frames = SubResource( 3 )
frame = 4

[node name="MainThemeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
autoplay = true

[node name="MailAddress" type="TextEdit" parent="."]
anchor_bottom = 0.075
margin_left = 55.0
margin_top = 133.0
margin_right = 255.0
margin_bottom = 130.6
hint_tooltip = "Same mail registered on Naruto game site, if that's your first time, please select REGISTER button."
custom_fonts/font = SubResource( 4 )
custom_colors/background_color = Color( 1, 1, 1, 1 )
text = "Example@Example.com"
syntax_highlighting = true
draw_spaces = true
hiding_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
